# interoperability-embedded-python

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  IRISAPP.session.sql  Installer.cls  MANIFEST.in  README.md  build-dist.sh  docker-compose.yml  dockerfile-ci  entrypoint.sh  index.html  iris-start-and-wait.sh  iris.script  merge.cpf  mkdocs.yml  module.xml  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  setup.py  sitemap.xml  test-in-docker.sh  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  iris-preview.yml  publish.yml  pytest-iris.yml  release.yml
agent-guidance/: index.html
agents-template/: index.html
ai-coding/: index.html
benchmarks/: index.html
changelog/: index.html
code-of-conduct/: index.html
command-line/: index.html
component-interaction/: index.html
component-interation/: index.html
contributing/: index.html
cookbooks/: index.html
cookbooks/add-business-operation/: index.html
cookbooks/add-business-process/: index.html
cookbooks/add-polling-service/: index.html
cookbooks/code-index/: index.html
cookbooks/fhir-submission-python-client/: index.html
cookbooks/hello-world-production/: index.html
cookbooks/hl7v2-native-input/: index.html
cookbooks/hl7v2-to-fhir-with-fhir-converter/: index.html
cookbooks/ingestion-pipeline/: index.html
cookbooks/production-settings-and-targets/: index.html
cookbooks/remote-migration/: index.html
credits/: index.html
debug/: index.html
demo/iris/PEX/: NonProduction.cls  WSGI.cls
demo/python/: register.py  requirements.txt
demo/python/async/: bo.py  bp.py  settings.py
demo/python/async_ng/: bo.py  bp.py  msg.py  settings.py
demo/python/bench/: bo.py  bp.py  msg.py
demo/python/duplex/: adapter.py  bo.py  bp.py  bs.py
demo/python/generator/: bo.py  bp.py  msg.py  settings.py
demo/python/multi_sync/: bo.py  bp.py  settings.py
demo/python/non_production/: my_script.py
demo/python/production_change_workflow/: README.md  settings.py  workflow.py
demo/python/pythonic_productions/: declarative.py  demo.py  mermaid_showcase.py  test.py
demo/python/reddit/: adapter.py  app.py  app_flask.py  bo.py  bp.py  bs.py  message.py  obj.py  settings.py
docs/: agent-guidance.md  agents-template.md  ai-coding.md  benchmarks.md  code-of-conduct.md  command-line.md  component-interaction.md  component-interation.md  contributing.md  credits.md  debug.md  dtl.md  example.md  healthcare-ai-coding.md  index.md  logging.md  prod-settings.md  production-change-workflow.md  production-graph-roadmap.md  production-graph.md  python-api.md  rest-api.md  settings.md  useful-links.md  venv.md  wrapper.md
docs/cookbooks/: add-business-operation.md  add-business-process.md  add-polling-service.md  code-index.md  fhir-submission-python-client.md  hello-world-production.md  hl7v2-native-input.md  hl7v2-to-fhir-with-fhir-converter.md  index.md  ingestion-pipeline.md  production-settings-and-targets.md  remote-migration.md
docs/getting-started/: first-steps.md  installation.md  register-component.md
dtl/: index.html
example/: index.html
getting-started/first-steps/: index.html
getting-started/installation/: index.html
getting-started/register-component/: index.html
healthcare-ai-coding/: index.html
logging/: index.html
output/: .gitignore  Cat.txt  Dog.txt
prod-settings/: index.html
production-change-workflow/: index.html
production-graph/: index.html
production-graph-roadmap/: index.html
python-api/: index.html
rest-api/: index.html
scripts/: check_wheel_contents.py  run_pytest.py  verify_installed_objectscript.py
search/: search_index.json
settings/: index.html
src/: setup.py
src/EnsLib/PEX/: BusinessOperation.cls  BusinessProcess.cls  BusinessService.cls  Common.cls  Director.cls  InboundAdapter.cls  Message.cls  OutboundAdapter.cls
src/Grongier/PEX/: BusinessOperation.cls  BusinessProcess.cls  BusinessService.cls  Common.cls  Director.cls  InboundAdapter.cls  Message.cls  OutboundAdapter.cls  PickleMessage.cls  Python.cls  Test.cls  Utils.cls
src/PEX/: MyBusinessOperationWithAdapter.cls  MyBusinessOperationWithIrisAdapter.cls  MyBusinessOperationWithPythonAdapter.cls  MyBusinessService.cls  MyOutboundAdapter.cls  Production.cls
src/PEX/Bench/: MSG.cls
src/PEX/Reddit/: InboundAdapter.cls
src/dc/Demo/: EmailOperation.cls  FileOperation.cls  FilterPostsRoutingRule.cls  PostMessage.cls  Production.cls  RedditService.cls
src/grongier/dacite/: __init__.py  config.py  dataclasses.py  types.py
src/grongier/pex/: __init__.py  __main__.py  _business_host.py  _business_process.py  _business_service.py  _cli.py  _common.py  _director.py  _manager.py  _outbound_adapter.py  _pickle_message.py  _private_session_duplex.py  _utils.py  (+1 more)
src/i14y/: Ens.Config.DefaultSettings.xml  TestLookupTable.xml
src/iop/: __init__.py  __main__.py  _async_request.py  _business_host.py  _business_operation.py  _business_process.py  _business_service.py  _cli.py  _common.py  _debugpy.py  _decorators.py  _director.py  _director_protocol.py  _dispatch.py  _generator_request.py  _inbound_adapter.py  _iris.py  _local.py  _log_manager.py  _message.py  _message_validator.py  _outbound_adapter.py  _persistent_message.py  _polling_business_service.py  _private_session_duplex.py  _private_session_process.py  _production.py  _pydantic_message.py  _remote.py  _serialization.py  _settings.py  _utils.py
src/python/: setup.py
src/tests/: conftest.py  test_adapters.py  test_bench.py  test_bproduction_settings.py  test_business_host.py  test_business_operation.py  test_business_process.py  test_business_service.py  test_cli.py  test_commun.py  test_director.py  test_dispatch.py  test_iop_business_host.py  test_iop_cli.py  test_iop_commun.py  test_iop_director.py  test_iop_dtl.py  test_iop_utils.py  test_local.py  test_manage.py  test_message.py  test_private_session.py  test_pydantic_message.py  test_remote.py  test_serialization.py  test_utils.py
useful-links/: index.html
wrapper/: index.html
(+343 files in other folders)
