[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "iris_pex_embedded_python"
version = "3.5.3"
description = "Iris Interoperability based on Embedded Python"
readme = "README.md"
authors = [
    { name = "grongier", email = "guillaume.rongier@intersystems.com" },
]
keywords = ["iris", "intersystems", "python", "embedded"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]

dependencies = [
    "pydantic>=2.0.0",
    "xmltodict>=0.12.0",
    "iris-embedded-python-wrapper>=0.0.6",
    "jsonpath-ng>=1.7.0",
    "debugpy>=1.8.0",
    "requests>=2.24.0"
]

license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/grongierisc/interoperability-embedded-python"
documentation = "https://github.com/grongierisc/interoperability-embedded-python/blob/master/README.md"
repository = "https://github.com/grongierisc/interoperability-embedded-python"
issues = "https://github.com/grongierisc/interoperability-embedded-python/issues"

[project.scripts]
iop = "iop._cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.cls"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "class"