[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "iris_pex_embedded_python"
version = "4.1.0b1"
description = "Iris Interoperability based on Embedded Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "grongier", email = "guillaume.rongier@intersystems.com" },
]
keywords = ["iris", "intersystems", "python", "embedded"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities"
]

dependencies = [
    "pydantic>=2.0.0",
    "xmltodict>=0.12.0",
    "iris-embedded-python-wrapper>=0.5.0",
    "iris-persistence>=0.3.0",
    "jsonpath-ng>=1.7.0",
    "requests>=2.24.0"
]

license = { file = "LICENSE" }

[project.optional-dependencies]
debug = [
    "debugpy>=1.8.0",
]
dev = [
    "build",
    "dataclasses-json",
    "intersystems-irispython",
    "mkdocs",
    "mkdocs-gen-files",
    "pymdown-extensions",
    "pyright",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "ruff",
    "tox>=4",
    "twine",
    "wheel",
    "debugpy>=1.8.0",
]

[project.urls]
homepage = "https://github.com/grongierisc/interoperability-embedded-python"
documentation = "https://github.com/grongierisc/interoperability-embedded-python/blob/master/README.md"
repository = "https://github.com/grongierisc/interoperability-embedded-python"
issues = "https://github.com/grongierisc/interoperability-embedded-python/issues"

[project.scripts]
iop = "iop.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["iop*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.cls", "cls/**/*.cls"]
"iop" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "class"
testpaths = ["src/tests"]
markers = [
    "unit: pure unit test - no IRIS instance required (all IRIS calls mocked)",
    "e2e_local: end-to-end test requiring a local IRIS instance",
    "e2e_remote: end-to-end test requiring a remote IRIS instance via REST API",
]

[tool.pyright]
pythonVersion = "3.10"
include = ["src/iop"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["src/tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
